--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service build --mode development --watch",
     "dev": "npm run serve",
-    "build": "vue-cli-service build",
+    "build": "./build.sh",
     "lint": "vue-cli-service lint",
     "postinstall": "patch-package"
   },
@@ -50,6 +50,7 @@
     "@vue/eslint-config-typescript": "^7.0.0",
     "babel-eslint": "^10.1.0",
     "copy-webpack-plugin": "6",
+    "crx": "^5.0.1",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^7.20.0",
