--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^9",
     "core-js": "^3.26.0",
     "crypto-js": "^4.1.1",
+    "file-system-access": "^1.0.4",
     "idb": "^7.1.1",
     "luxon": "^3.1.0",
     "mitt": "^3.0.0",
@@ -36,7 +37,7 @@
     "@types/semver": "^7.3.13",
     "@types/throttle-debounce": "^5.0.0",
     "@types/webextension-polyfill": "^0.8.2",
-    "@types/wicg-file-system-access": "^2020.9.5",
+    "@types/wicg-file-system-access": "^2023.10.4",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vicons/ionicons5": "^0.12.0",
